--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -9,17 +9,20 @@
             android:text="Total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/editTextTotal"
-            android:layout_marginEnd="18dp" android:layout_marginRight="18dp" android:layout_marginBottom="211dp"/>
+            android:id="@+id/buttonTotal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="211dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="75dp"
+            android:layout_marginStart="75dp" app:layout_constraintEnd_toStartOf="@+id/textViewTotal"
+            android:layout_marginEnd="40dp" android:layout_marginRight="40dp"/>
     <Button
             android:text="Average"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button2"
+            android:id="@+id/buttonAve"
             android:layout_marginTop="35dp"
-            app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintEnd_toStartOf="@+id/editTextAve"
-            android:layout_marginEnd="18dp" android:layout_marginRight="18dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/buttonTotal"
+            app:layout_constraintStart_toStartOf="@+id/buttonTotal"/>
     <TextView
             android:text="Java"
             android:layout_width="wrap_content"
@@ -71,20 +74,19 @@
             android:layout_marginTop="48dp"
             app:layout_constraintTop_toBottomOf="@+id/editTextNetwork" android:layout_marginEnd="40dp"
             android:layout_marginRight="40dp" app:layout_constraintEnd_toEndOf="parent"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:ems="10"
-            android:id="@+id/editTextTotal"
-            app:layout_constraintBaseline_toBaselineOf="@+id/button" android:layout_marginEnd="17dp"
-            android:layout_marginRight="17dp" app:layout_constraintEnd_toEndOf="parent"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:ems="10"
-            android:id="@+id/editTextAve"
-            app:layout_constraintBaseline_toBaselineOf="@+id/button2" android:layout_marginEnd="17dp"
-            android:layout_marginRight="17dp" app:layout_constraintEnd_toEndOf="parent"/>
+    <TextView
+            android:layout_width="102dp"
+            android:layout_height="60dp"
+            android:id="@+id/textViewTotal"
+            app:layout_constraintBottom_toBottomOf="@+id/buttonTotal"
+            android:layout_marginBottom="1dp" android:textSize="24sp"
+            app:layout_constraintStart_toEndOf="@+id/buttonTotal" android:layout_marginEnd="157dp"
+            android:layout_marginRight="157dp" app:layout_constraintEnd_toEndOf="parent"/>
+    <TextView
+            android:layout_width="125dp"
+            android:layout_height="63dp"
+            android:id="@+id/textViewAve"
+            app:layout_constraintTop_toTopOf="@+id/buttonAve"
+            app:layout_constraintStart_toStartOf="@+id/textViewTotal" android:textSize="24sp"
+            android:layout_marginTop="8dp"/>
 </android.support.constraint.ConstraintLayout>
